      operators. [Mike]
    * "wait for scancode" [Mike Caron]
    * "save map state", "load map state", "reset map state", "delete map state"
      [Ralph Versteegen]
    * "party money", "set money" [Ralph]
    * "get tile animation offset", "set tile animation offset",
      "current display tile", "animation start tile" [Ralph Versteegen]

  * Unlump.exe
    * Ported to FreeBasic [Mike Caron]
    * Output directory defaults to gamename.rpgdir [James]
    * When run without arguments, tells windows users to
      drag-and-drop [James]
    * Can be used to unlump other lumped files too; cleans up on error [Ralph]

  * Stuff only Developers Will Notice
    * FreeBASIC 0.16b and newer support [Ralph]
    * Removal of some QuickBasic-specific code
    * New common.bas for code shared by game and custom
    * New util.bas for code that does not depend on any other part
      of the OHR
    * Some rewritten map wrapping code [Ralph Versteegen]
    * Internal data formats for NPCs and inventory rewritten with UDTs
      [Ralph, Mike]
    * Internal data formats for battle sprites (heroes, enemies, attacks)
      rewritten to use UDT's (in-progress) [James Paige]
    * Hspeak's exit code is 2 if there were warnings [Mike Caron]
    * Use keyval(-1) to detect when the OS has requested the program
      to exit
    * New internal master palette format has higher colour precision: 8 bits
      instead of 6, and multiple palettes [Ralph]

July 09 2006 [hasta-la-qb]
  * This is the final version to support a real DOS version (GAME-QB and
    CUSTOMQB) You should be using the Windows or Linux versions already
    anyway.

  * New Features
    * Input string gets 3 new arguments, center, positionx, positiony.
      It also behaves a little different now.(Yuriy)
    * Hspeak.exe now waits for a keypress when finished, which should avoid
      a lot of confusion for new plotscripters who are unfamiliar with
      command-line tools. Also added -k option to supress this new